--- a/src/style/base/font.scss
+++ b/src/style/base/font.scss
@@ -10,48 +10,48 @@
   font-weight: 500;
   font-style: italic;
 }
-@font-face{
-  font-family: 'Geometria';
-  src: url('../fonts/Geometria/Geometria-Italic.ttf');
-  font-weight: normal;
-  font-style: italic;
-}
+// @font-face{
+//   font-family: 'Geometria';
+//   src: url('../fonts/Geometria/Geometria-Italic.ttf');
+//   font-weight: normal;
+//   font-style: italic;
+// }
 @font-face{
   font-family: 'Geometria';
   src: url('../fonts/Geometria/Geometria-Heavy.ttf');
   font-weight: 900;
   font-style: normal;
 }
-@font-face{
-  font-family: 'Geometria';
-  src: url('../fonts/Geometria/Geometria-ExtraBoldItalic.ttf');
-  font-weight: 800;
-  font-style: italic;
-}
+// @font-face{
+//   font-family: 'Geometria';
+//   src: url('../fonts/Geometria/Geometria-ExtraBoldItalic.ttf');
+//   font-weight: 800;
+//   font-style: italic;
+// }
 @font-face{
   font-family: 'Geometria';
   src: url('../fonts/Geometria/Geometria-Medium.ttf');
   font-weight: 500;
   font-style: normal;
 }
-@font-face{
-  font-family: 'Geometria';
-  src: url('../fonts/Geometria/Geometria-BoldItalic.ttf');
-  font-weight: bold;
-  font-style: italic;
-}
-@font-face{
-  font-family: 'Geometria';
-  src: url('../fonts/Geometria/Geometria-LightItalic.ttf');
-  font-weight: 300;
-  font-style: italic;
-}
-@font-face{
-  font-family: 'Geometria';
-  src: url('../fonts/Geometria/Geometria-HeavyItalic.ttf');
-  font-weight: 900;
-  font-style: italic;
-}
+// @font-face{
+//   font-family: 'Geometria';
+//   src: url('../fonts/Geometria/Geometria-BoldItalic.ttf');
+//   font-weight: bold;
+//   font-style: italic;
+// }
+// @font-face{
+//   font-family: 'Geometria';
+//   src: url('../fonts/Geometria/Geometria-LightItalic.ttf');
+//   font-weight: 300;
+//   font-style: italic;
+// }
+// @font-face{
+//   font-family: 'Geometria';
+//   src: url('../fonts/Geometria/Geometria-HeavyItalic.ttf');
+//   font-weight: 900;
+//   font-style: italic;
+// }
 @font-face{
   font-family: 'Geometria';
   src: url('../fonts/Geometria/Geometria.ttf');
@@ -70,18 +70,18 @@
   font-weight: 800;
   font-style: normal;
 }
-@font-face{
-  font-family: 'Geometria';
-  src: url('../fonts/Geometria/Geometria-ThinItalic.ttf');
-  font-weight: 100;
-  font-style: italic;
-}
-@font-face{
-  font-family: 'Geometria';
-  src: url('../fonts/Geometria/Geometria-ExtraLightItalic.ttf');
-  font-weight: 200;
-  font-style: italic;
-}
+// @font-face{
+//   font-family: 'Geometria';
+//   src: url('../fonts/Geometria/Geometria-ThinItalic.ttf');
+//   font-weight: 100;
+//   font-style: italic;
+// }
+// @font-face{
+//   font-family: 'Geometria';
+//   src: url('../fonts/Geometria/Geometria-ExtraLightItalic.ttf');
+//   font-weight: 200;
+//   font-style: italic;
+// }
 @font-face{
   font-family: 'Geometria';
   src: url('../fonts/Geometria/Geometria-Light.ttf');
