--- a/src/style/page.scss
+++ b/src/style/page.scss
@@ -1436,11 +1436,11 @@ input:focus{
     }
     .spasibo{
         margin-bottom: 50px;
-    }
-    .spasibo{
         margin-left: -30px;
         margin-right: -30px;
+        padding-top: 65px;
     }
+    
 }
 @media(max-width: 412px){
     .spasibo{
@@ -1453,5 +1453,142 @@ input:focus{
     .spasibo__title {
         font-size: 26px;
         line-height: 34px;
+    }
+}
+
+.float-img{
+    margin-top: 50px;
+    margin-bottom: 50px;
+    img{
+        margin-right: 41px;
+        float: left;
+        max-width: 100%;
+    }
+}
+.float-img:after{
+    content: "";
+    clear: both;
+    display: table;
+}
+
+@media(max-width: 991px){
+    .float-img{
+        margin-top: 15px;
+        margin-bottom: 15px;
+        img{
+            margin-right: 0;
+            float: none;
+            margin-bottom: 15px;
+        }
+    }
+}
+
+#map{
+    height: 609px;
+}
+.contact{
+    padding-top: 60px;
+    display: flex;
+}
+.contact__item{
+    width: 50%;
+}
+.contact__line{
+    margin-bottom: 20px;
+    display: flex;
+    font-size: 25px;
+    line-height: 31px;
+    color: rgba(0, 0, 0, 0.5);
+    span{
+        color: #000;
+        padding-left: 10px;
+    }
+}
+.contact__form{
+    display: flex;
+    margin: 0 -7px;
+}
+.korina-form__wrap{
+    width: 50%;
+    margin: 0 7px;
+    .label{
+        font-size: 14px;
+        line-height: 18px;
+        color: rgba(38, 37, 38, 0.7);
+        display: block;
+        margin-bottom: 4px;
+    }
+    input{
+        background: rgba(213, 213, 213, 0.5);
+        height: 42px;
+        margin-bottom: 30px;
+        width: 100%;
+        padding: 0 15px;
+    }
+    textarea{
+        margin-top: 21px;
+        width: 100%;
+        height: 136px;
+        border: 1px solid #000000;
+        resize: none;
+        padding: 12px 15px;
+    }
+    button{
+        background: #242424;
+        font-size: 15px;
+        width: 100%;
+        height: 42px;
+        line-height: 19px;
+        text-align: center;
+        transition: 0.3s all;
+        color: #FFFFFF;
+        margin-top: 47px;
+    }
+    button:hover{
+        opacity: 0.9;
+        cursor: pointer;
+    }
+}
+
+@media(max-width: 991px){
+    .contact{
+        flex-direction: column;
+    }
+    .contact__item{
+        width: 100%;
+        margin-bottom: 50px;
+    }
+}
+@media(max-width: 991px){
+    #map{
+        margin: 0 -30px;
+    }
+}
+@media(max-width: 559px){
+    .contact__line{
+        font-size: 15px;
+        line-height: 19px;
+    }
+    .contact__form{
+        margin: 0;
+        flex-direction: column;
+    }
+    .korina-form__wrap{
+        width: 100%;
+        margin: 0;
+    }
+    .korina-form__wrap textarea{
+        margin-top: 0;
+    }
+    .korina-form__wrap button{
+        margin-top: 30px;
+    }
+    .contact__item:last-child{
+        margin-bottom: 0;
+    }
+}
+@media(max-width: 412px){
+    #map{
+        margin: 0 -15px;
     }
 }
