--- a/src/style/page.scss
+++ b/src/style/page.scss
@@ -1598,7 +1598,8 @@ input:focus{
     justify-content: space-between;
     align-items: flex-start;
     a{
-        padding-top: 8px;
+        padding-top: 2px;
+        padding-left: 8px;
         display: flex;
         align-items: center;
         font-size: 22px;
@@ -1690,5 +1691,320 @@ input:focus{
     }
     .history__top a span{
         display: none;
+    }
+}
+
+.history__bot{
+    display: flex;
+    margin-top: 40px;
+    justify-content: space-between;
+}
+
+.history__bot__item, .history__bot__item2{
+   
+}
+.history__bot__item{
+    font-size: 20px;
+    line-height: 25px;
+    color: rgba(38, 37, 38, 0.5);
+    span{
+        color: #000;
+    }
+    div{
+        margin-bottom: 10px;
+    }
+}
+.history__bot__item2{
+    text-align: right;
+    font-size: 23px;
+    line-height: 29px;
+    /* identical to box height */
+    color: #262526;
+    div{
+        margin-bottom: 10px;
+    }
+    span{
+        font-weight: bold;
+        padding-right: 10px;
+    }
+}
+
+@media(max-width: 767px){
+    .history__bot{
+        margin-top: 25px;
+    }
+    .history__bot__item2{
+        font-size: 12px;
+        line-height: 15px;
+        div{
+            margin-bottom: 6px;
+        }
+    }
+    .history__bot__item{
+        font-size: 9px;
+        line-height: 11px; 
+        div{
+            margin-bottom: 6px;
+        } 
+    }
+}
+@media(max-width: 374px){
+    .history__bot{
+        flex-direction: column-reverse;
+    }
+    .history__bot__item{
+        margin-top: 15px;
+        text-align: right;
+    }
+}
+
+.cabinet{
+    display: flex;
+    .label{
+        display: block;
+        font-size: 14px;
+        line-height: 18px;
+        /* identical to box height */
+        color: rgba(38, 37, 38, 0.7);
+        margin-bottom: 4px;
+    }
+}
+.cabinet__text{
+    font-size: 23px;
+    line-height: 29px;
+    margin-bottom: 23px;
+}
+.cabinet__form input{
+    height: 42px;
+    margin-bottom: 29px;
+    padding: 0 15px;
+    width: 100%;
+}
+.cabinet__left{
+    width: 306px;
+}
+.cabinet__form button{
+    background: #262526;
+    height: 67px;
+    font-weight: bold;
+    font-size: 22px;
+    line-height: 28px;
+    color: #fff;
+    width: 100%;
+    transition: 0.3s all;
+    cursor: pointer;
+}
+.cabinet__form button:hover{
+    opacity: 0.9;
+}
+.adressa{
+    text-align: right;
+}
+.adressa__item{
+    font-size: 16px;
+    line-height: 20px;
+}
+.adressa__delete{
+    background-color: #fff;
+    margin-left: 18px;
+    cursor: pointer;
+    transition: 0.3s all;
+}
+.adressa__delete:hover{
+    transform: scale(1.1);
+}
+.adressa__item{
+    margin-bottom: 7px;
+}
+.adressa__add{
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 18px;
+    /* identical to box height */
+    color: #262526;
+    background-color: #fff;
+    cursor: pointer;
+    span{
+        padding-right: 5px;
+    }
+}
+.cabinet__form{
+    margin-bottom: 42px;
+}
+
+.cabinet__right{
+    flex: 1;
+    padding-left: 123px;
+}
+.cabinet__head1{
+    text-align: center;
+    width: 145px;
+}
+.cabinet__head3{
+    flex: 1;
+    text-align: right;
+    padding-right: 71px;
+}
+.number{
+    font-weight: bold;
+    font-size: 16px;
+    line-height: 20px;
+    text-align: center;
+    color: #262526;
+    width: 145px;
+}
+.cabinet__price-r{
+    flex: 0 0 220px;
+    text-align: right;
+    padding-right: 77px;
+    font-size: 16px;
+    line-height: 20px;
+}
+.cabinet .korzina__name{
+    flex: 1;
+}
+.cabinet-povtor{
+    margin-top: 5px;
+    padding: 10px 0;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    background-color: #fff;
+    img{
+        margin-right: 14px;
+        transition: 0.3s all;
+    }
+}
+.cabinet-povtor:hover img{
+    transform: rotate(180deg);
+}
+
+@media(max-width: 1299px){
+    .cabinet__price-r{
+        padding-right: 25px;
+    }
+    .cabinet-povtor{
+        margin-left: auto;
+    }
+    .cabinet__head3{
+        padding-right: 25px;
+    }
+    .cabinet__right{
+        padding-left: 50px;
+    }
+}
+@media(max-width: 1199px){
+    .cabinet .korina__tovar{
+        flex: 0 0 100px;
+    }
+    .korzina__head__item.item1{
+        flex: 0 0 100px;
+    }
+    .cabinet__price-r{
+        flex: 0 0 170px;
+    }
+    .cabinet__left {
+        width: 270px;
+    }
+    .number{
+        width: 125px;
+    }
+    .cabinet__head1{
+        width: 125px;
+    }
+}
+@media(max-width: 991px){
+    .cabinet{
+        flex-direction: column;
+        align-items: center;
+    }
+    .cabinet__left{
+        width: 100%;
+        max-width: 500px;
+        margin-bottom: 50px;
+        margin-top: 25px;
+    }
+    .cabinet__right{
+        padding-left: 0;
+        width: 100%;
+    }
+}
+@media(max-width: 767px){
+    .cabinet__price-r{
+        order: 2;
+    }
+    .cabinet .korina__tovar{
+        display: none;
+    }
+    .cabinet__text{
+        font-size: 23px;
+        line-height: 29px;
+    }
+    .cabinet .label{
+        font-size: 14px;
+        line-height: 18px;
+    }
+    .adressa{
+        text-align: left;
+        margin-top: 29px;
+    }
+    .cabinet-povtor{
+        position: absolute;
+        bottom: 13px;
+        left: 10px;
+    }
+    .korzina__body__item{
+        position: relative;
+        padding-bottom: 43px;
+    }
+    .number{
+        font-size: 13px;
+        line-height: 16px;
+        width: 75px;
+    }
+    .cabinet__head1{
+        width: 75px;
+    }
+    .cabinet__price-r{
+        flex: 0;
+        white-space: nowrap;
+    }
+    .cabinet__left{
+        margin-bottom: 25px;
+    }
+    .cabinet__price-r{
+        font-size: 11px;
+        line-height: 14px;
+    }
+    .cabinet-povtor{
+        font-size: 12px;
+        line-height: 15px;
+        img{
+            width: 12px;
+            margin-right: 10px;
+        }
+    }
+    .adressa .cabinet__text{
+        font-size: 14px;
+        line-height: 15px;
+    }
+    .adressa__item{
+        font-size: 12px;
+        line-height: 13px;  
+        display: flex;
+        align-items: center;
+        img{
+            width: 12px;
+            margin-top: 2px;
+        }
+    }
+    .adressa__delete{
+        margin-left: 8px;
+        width: 15px;
+    }
+    .adressa__add{
+        font-size: 12px;
+        line-height: 15px;
     }
 }
