--- a/src/style/base/font.scss
+++ b/src/style/base/font.scss
@@ -1,27 +1,27 @@
-@font-face{
-  font-family: 'Geometria';
-  src: url('../fonts/Geometria/Geometria-Thin.ttf');
-  font-weight: 100;
-  font-style: normal;
-}
-@font-face{
-  font-family: 'Geometria';
-  src: url('../fonts/Geometria/Geometria-MediumItalic.ttf');
-  font-weight: 500;
-  font-style: italic;
-}
+// @font-face{
+//   font-family: 'Geometria';
+//   src: url('../fonts/Geometria/Geometria-Thin.ttf');
+//   font-weight: 100;
+//   font-style: normal;
+// }
+// @font-face{
+//   font-family: 'Geometria';
+//   src: url('../fonts/Geometria/Geometria-MediumItalic.ttf');
+//   font-weight: 500;
+//   font-style: italic;
+// }
 // @font-face{
 //   font-family: 'Geometria';
 //   src: url('../fonts/Geometria/Geometria-Italic.ttf');
 //   font-weight: normal;
 //   font-style: italic;
 // }
-@font-face{
-  font-family: 'Geometria';
-  src: url('../fonts/Geometria/Geometria-Heavy.ttf');
-  font-weight: 900;
-  font-style: normal;
-}
+// @font-face{
+//   font-family: 'Geometria';
+//   src: url('../fonts/Geometria/Geometria-Heavy.ttf');
+//   font-weight: 900;
+//   font-style: normal;
+// }
 // @font-face{
 //   font-family: 'Geometria';
 //   src: url('../fonts/Geometria/Geometria-ExtraBoldItalic.ttf');
@@ -64,12 +64,12 @@
   font-weight: bold;
   font-style: normal;
 }
-@font-face{
-  font-family: 'Geometria';
-  src: url('../fonts/Geometria/Geometria-ExtraBold.ttf');
-  font-weight: 800;
-  font-style: normal;
-}
+// @font-face{
+//   font-family: 'Geometria';
+//   src: url('../fonts/Geometria/Geometria-ExtraBold.ttf');
+//   font-weight: 800;
+//   font-style: normal;
+// }
 // @font-face{
 //   font-family: 'Geometria';
 //   src: url('../fonts/Geometria/Geometria-ThinItalic.ttf');
@@ -82,18 +82,18 @@
 //   font-weight: 200;
 //   font-style: italic;
 // }
-@font-face{
-  font-family: 'Geometria';
-  src: url('../fonts/Geometria/Geometria-Light.ttf');
-  font-weight: 300;
-  font-style: normal;
-}
-@font-face{
-  font-family: 'Geometria';
-  src: url('../fonts/Geometria/Geometria-ExtraLight.ttf');
-  font-weight: 200;
-  font-style: normal;
-}
+// @font-face{
+//   font-family: 'Geometria';
+//   src: url('../fonts/Geometria/Geometria-Light.ttf');
+//   font-weight: 300;
+//   font-style: normal;
+// }
+// @font-face{
+//   font-family: 'Geometria';
+//   src: url('../fonts/Geometria/Geometria-ExtraLight.ttf');
+//   font-weight: 200;
+//   font-style: normal;
+// }         
 @font-face{
   font-family: 'YoungHeart';
   src: url('../fonts/YoungHeart/YoungHeart.otf');
