--- a/src/style/page.scss
+++ b/src/style/page.scss
@@ -107,13 +107,25 @@ p{
 .banner{
     display: block;
 }
-.catalog__wrap{
-    display: flex;
-}
 .banner img{
     width: 100%;
     display: block;
 }
+.banner img.banner__mob{
+    display: none;
+}
+@media(max-width: 767px){
+    .banner img{
+        display: none;
+    }
+    .banner img.banner__mob{
+        display: block;
+    }
+}
+.catalog__wrap{
+    display: flex;
+}
+
 .catalog h1{
     font-family: 'YoungHeart',sans-serif;
     font-weight: 500;
@@ -648,13 +660,13 @@ p{
 }
 .tovar-right__title{
     font-weight: bold;
-    font-size: 30px;
-    line-height: 38px;
+    font-size: 26px;
+    line-height: 33px;
     margin-bottom: 34px;
 }
 .har__wrap{
-    font-size: 25px;
-    line-height: 31px;
+    font-size: 20px;
+    line-height: 26px;
     margin-bottom: 34px;
 }
 .har__wrap div{
@@ -668,14 +680,14 @@ p{
     display: flex;
 }
 .tovar__right__btn button{
-    width: 306px;
-    height: 74px;
+    width: 280px;
+    height: 65px;
     margin-right: 15px;
 }
 .tovar__right__btn1{
     font-weight: bold;
-    font-size: 26px;
-    line-height: 33px;
+    font-size: 22px;
+    line-height: 28px;
     border: 1px solid #262526;
     background-color: #fff;
     cursor: pointer;
@@ -686,8 +698,8 @@ p{
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
 }
 .tovar__right__btn2{
-    font-size: 26px;
-    line-height: 33px;
+    font-size: 22px;
+    line-height: 28px;
     color: #fff;
     background: #262526;
     transition: 0.3s all;
@@ -885,10 +897,10 @@ h3{
 .tovar-text__desc{
     margin-bottom: 38px;
 }
-.tovar-text__sostav p{
-    font-size: 18px;
-    line-height: 23px;
-}
+// .tovar-text__sostav p{
+//     font-size: 18px;
+//     line-height: 23px;
+// }
 .tovar-text{
     margin-bottom: 56px;
 }
@@ -907,10 +919,10 @@ h3{
         line-height: 21px;
         margin-bottom: 10px;
     }
-    .tovar-text__sostav p{
-        font-size: 13px;
-        line-height: 16px;
-    }
+    // .tovar-text__sostav p{
+    //     font-size: 13px;
+    //     line-height: 16px;
+    // }
 }
 
 .tovar-slider__title{
@@ -1498,8 +1510,8 @@ input:focus{
 .contact__line{
     margin-bottom: 20px;
     display: flex;
-    font-size: 25px;
-    line-height: 31px;
+    font-size: 22px;
+    line-height: 28px;
     color: rgba(0, 0, 0, 0.5);
     span{
         color: #000;
@@ -1606,7 +1618,7 @@ input:focus{
         line-height: 28px;
         svg{
             margin-right: 11px;
-            margin-top: 3px;
+            height: 10px;
             transition: 0.3s all;
         }
         span{
@@ -1866,26 +1878,30 @@ input:focus{
 .cabinet-povtor{
     margin-top: 5px;
     padding: 10px 0;
+    height: 36px;
     font-weight: bold;
     display: flex;
+    margin-left: auto;
     align-items: center;
     cursor: pointer;
     overflow: hidden;
     background-color: #fff;
     img{
-        margin-right: 14px;
+        
         transition: 0.3s all;
     }
     span{
-        opacity: 0;
-        transform: translateX(-100%);
+        width: 0;
+        margin-left: 0;
+        overflow: hidden;
         transition: 0.3s all;
+        white-space: nowrap;
     }
 }
 
 .cabinet-povtor:hover span{
-    opacity: 1;
-    transform: translateX(0);
+    width: 109px;
+    margin-left: 14px;
 }
 .cabinet-povtor:hover img{
     transform: rotate(180deg);
@@ -1941,8 +1957,8 @@ input:focus{
         width: 100%;
     }
     .cabinet-povtor span{
-        opacity: 1;
-        transform: translateX(0);
+        width: auto;
+        margin-left: 14px;
     }
 }
 @media(max-width: 767px){
@@ -1997,7 +2013,7 @@ input:focus{
         line-height: 15px;
         img{
             width: 12px;
-            margin-right: 10px;
+            
         }
     }
     .adressa .cabinet__text{
