--- a/src/style/page.scss
+++ b/src/style/page.scss
@@ -608,11 +608,12 @@ p{
     position: relative;
 }
 
-.big-cart__item.video:after{
-    content: "";
+.video-btn{
+    display: none;
     width: 121px;
     height: 121px;
     position: absolute;
+    z-index: 1;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
@@ -866,7 +867,7 @@ p{
     .nav-cart .slick-list{
         width: 200px;
     }
-    .big-cart__item.video:after{
+    .video-btn{
         width: 90px;
         height: 90px;
         background-size: 35px;
@@ -2040,8 +2041,24 @@ input:focus{
         line-height: 15px;
     }
 }
-
+video{
+    overflow: hidden;
+}
+#big-cart-video{
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    min-height: 100%;
+    background-color: transparent;
+}
 .skidka{
     margin-top: 35px;
     font-weight: bold;
+}
+.video.active .video-btn{
+    display: block;
+    cursor: pointer;
 }
