--- a/src/style/page.scss
+++ b/src/style/page.scss
@@ -2044,7 +2044,7 @@ input:focus{
 video{
     overflow: hidden;
 }
-#big-cart-video{
+.big-cart-video{
     position: absolute;
     top: 0;
     right: 0;
